--- a/src/timeline.css
+++ b/src/timeline.css
@@ -319,12 +319,12 @@
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 700;
 }
-/* 
+ 
 .timeline-display {
   padding: 10px 0px;
   width: 80%;
   text-align: center;
-} */
+} 
 
 .un-tln {
   width: 250px;
