--- a/src/timeline.css
+++ b/src/timeline.css
@@ -194,6 +194,7 @@
   align-items: center;
   /*  */
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  flex-shrink: 0;
 }
 
 .dr-header-containter {
@@ -209,6 +210,7 @@
 .dr-name-header,
 .dr-total {
   width: 50%;
+  
 }
 
 .dr-total .total-details {
