--- a/src/tl.css
+++ b/src/tl.css
@@ -1,6 +1,6 @@
 .time-period-sub {
   border: 1px solid black;
-  height: 200px;
+  height: 450px;
 }
 .timeline-wrapper {
   overflow-x: scroll;
@@ -40,7 +40,23 @@
   font-size: 10px;
   font-weight: 700;
   color: rgb(68, 67, 67);
-  border:none;
+  border: none;
   background-color: rgb(238, 238, 162);
+}
 
+.cordinating_body {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  align-items: flex-start;
+}
+
+.rt-manual, .timeline-underlying{
+  grid-column-start: 1;
+  grid-column-end: 1;
+  grid-row-start: 1;
+  grid-row-end: 1;
+}
+.rt-manual{
+  z-index: 100;
 }
