--- a/src/tl.css
+++ b/src/tl.css
@@ -1,6 +1,7 @@
 .time-period-sub {
   border: 1px solid black;
   height: 450px;
+  border-top: none;
 }
 .timeline-wrapper {
   overflow-x: scroll;
@@ -12,7 +13,7 @@
   border-collapse: collapse;
 }
 
-timeline-table tfoot th {
+.timeline-table tfoot th {
   text-align: center;
 }
 
@@ -30,7 +31,7 @@ timeline-table tfoot th {
 }
 
 .timeline-table-before {
-  width: 220px;
+  width: 225px;
 
   flex-shrink: 0;
 }
@@ -69,4 +70,16 @@ timeline-table tfoot th {
 }
 .rt-manual {
   z-index: 100;
+}
+.routing-container {
+  padding: 5px;
+}
+
+.dr-container {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.capacity-header-container {
+  padding-right: 0px;
 }
